--- a/website.html
+++ b/website.html
@@ -27,8 +27,8 @@
 
 
         </ul>
-        
-        <i class='bx bx-menu-alt-right'></i>
+
+        <i class='bx bx-menu-alt-right' id="menu"></i>
 
         <a href="#Contact" class="btn">Contact Me</a>
 
