--- a/website.html
+++ b/website.html
@@ -112,21 +112,22 @@
         <div class="projects-container">
             <div class="box">
                 <h1><span>Leadership Board</span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi et ratione possimus sapiente in autem tempora non voluptate cupiditate. Labore repudiandae ratione ad quas autem rerum, eveniet enim sunt?</p>
+                <p>Simulation Animation for best performing stocks in the JSE markets for the
+                    past decade.</p>
                 <img src="./Security Dashboard Design1.png" alt="Leadership board">
 
             </div>
 
             <div class="box">
-                <h1><span>Project 2</span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi et ratione possimus sapiente in autem tempora non voluptate cupiditate. Labore repudiandae ratione ad quas autem rerum, eveniet enim sunt?</p>
+                <h1><span>Web Application Calculator</span></h1>
+                <p>Online calculator  for smart saving and investment.</p>
                 <img src="./crypto rankings1.jpg" alt="JSE Market">
 
             </div>
 
             <div class="box">
-                <h1><span>Project 3</span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi et ratione possimus sapiente in autem tempora non voluptate cupiditate. Labore repudiandae ratione ad quas autem rerum, eveniet enim sunt?</p>
+                <h1><span> Drop Shipping</span></h1>
+                <p>List & Selling of Products across Online Stores</p>
                 <img src="./eCommerce1.png" alt="City Visitation Picture">
 
             </div>
