--- a/website.html
+++ b/website.html
@@ -166,19 +166,19 @@
 
         <div class="col-left">
             <div class="col-box">
-                <span></span>
+                <span><i class='bx bxs-location-plus'></i></span>
                 <span>4211 Harry Gwala Street, Phillipi 7785</span>
 
             </div>
 
             <div class="col-box">
-                <span></span>
+                <span><i class='bx bxs-phone'></i></span>
                 <span>+27 64 876 8823</span>
 
             </div>
 
             <div class="col-box">
-                <span></span>
+                <span><i class='bx bxs-envelope'></i></span>
                 <span>nkosiphendulepakamile@gmail.com</span>
 
             </div>
@@ -188,7 +188,19 @@
         <div class="col-right">
             <span>About My Experience</span>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit minus vero dicta eius hic ipsa reiciendis laboriosam! Excepturi nostrum, tenetur inventore dolorum quo saepe expedita ipsa amet laboriosam, hic necessitatibus!</p>
+
+            <div class="social-icons">
+
+                <span><i class='bx bxl-linkedin-square'></i></span>
+                <span><i class='bx bxl-github' ></i></span>
+                <span><i class='bx bxl-twitter' ></i></span>
+                <span><i class='bx bxl-instagram-alt' ></i></span>
+            </div>
+
         </div>
+
+
+
 
 
     </footer>
