--- a/website.html
+++ b/website.html
@@ -10,8 +10,28 @@
 
     <title>Nkosipendule Pakamile | Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
+
 <body>
+    <nav>
+        <a href="#" class="logo"><span>Nkosi</span></a>
+        <ul class="links">
+
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+
+
+
+        </ul>
+
+        <a href="#Contact" class="btn">Contact Me</a>
+
+
+    </nav>
 
 
     <script src="script.js"></script>
