--- a/website.html
+++ b/website.html
@@ -27,6 +27,8 @@
 
 
         </ul>
+        
+        <i class='bx bx-menu-alt-right'></i>
 
         <a href="#Contact" class="btn">Contact Me</a>
 
