--- a/website.html
+++ b/website.html
@@ -101,6 +101,20 @@
 
     </section>
 
+    <section id="projects">
+        <hi class="header"><span>Projects</span></hi>
+        <div class="projects-container">
+            <div class="box">
+                <h1><span>Project 1</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi et ratione possimus sapiente in autem tempora non voluptate cupiditate. Labore repudiandae ratione ad quas autem rerum, eveniet enim sunt?</p>
+
+            </div>
+
+        </div>
+
+
+    </section>
+
 
     <script src="script.js"></script>
     
