--- a/website.html
+++ b/website.html
@@ -35,6 +35,14 @@
 
     </nav>
 
+    <section id="home">
+        <img src="./Professional Head3.jpg" alt="Professional Headshoot">
+        
+
+
+
+    </section>
+
 
     <script src="script.js"></script>
     
