--- a/website.html
+++ b/website.html
@@ -107,6 +107,21 @@
             <div class="box">
                 <h1><span>Project 1</span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi et ratione possimus sapiente in autem tempora non voluptate cupiditate. Labore repudiandae ratione ad quas autem rerum, eveniet enim sunt?</p>
+                <img src="./Security Dashboard Design.png" alt="Leadership board">
+
+            </div>
+
+            <div class="box">
+                <h1><span>Project 2</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi et ratione possimus sapiente in autem tempora non voluptate cupiditate. Labore repudiandae ratione ad quas autem rerum, eveniet enim sunt?</p>
+                <img src="./crypto rankings.jpg" alt="JSE Market">
+
+            </div>
+
+            <div class="box">
+                <h1><span>Project 33</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi et ratione possimus sapiente in autem tempora non voluptate cupiditate. Labore repudiandae ratione ad quas autem rerum, eveniet enim sunt?</p>
+                <img src="./eCommerce.png" alt="City Visitation Picture">
 
             </div>
 
