--- a/website.html
+++ b/website.html
@@ -58,7 +58,14 @@
         <div class="about-box">
             <div class="about-info">
                 <h1><span>About Me</span></h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab ex laborum dignissimos, accusantium animi ipsa corrupti aspernatur! Repellendus quia sequi, commodi asperiores quaerat debitis libero officiis sed, quod architecto placeat.</p>
+                <p>I have graduated from the University of Cape Town with Bachelor Degree
+                    in Information Systems and Business Computing. I have further obtained technical skills
+                    certificate from various online institutions such as Coursera and IT Varsity.
+                    I have 2 years working experience as a System Administrator. I
+                    reside as Deputy Chairman of KPR, an NGO that offers tutoring and mentoring services to
+                    underprivileged high school learners since the establishment of the organisation in 2017. 
+                
+            </p>
 
             </div>
 
@@ -104,7 +111,7 @@
         <hi class="header"><span>Projects</span></hi>
         <div class="projects-container">
             <div class="box">
-                <h1><span>Project 1</span></h1>
+                <h1><span>Leadership Board</span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nisi et ratione possimus sapiente in autem tempora non voluptate cupiditate. Labore repudiandae ratione ad quas autem rerum, eveniet enim sunt?</p>
                 <img src="./Security Dashboard Design1.png" alt="Leadership board">
 
@@ -185,8 +192,9 @@
         </div>
 
         <div class="col-right">
-            <span>About My Experience</span>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit minus vero dicta eius hic ipsa reiciendis laboriosam! Excepturi nostrum, tenetur inventore dolorum quo saepe expedita ipsa amet laboriosam, hic necessitatibus!</p>
+            <span>About My Services</span>
+            <p>Availabe for Freelancing! & Project Collaborating!</p>
+
 
             <div class="social-icons">
 
