--- a/website.html
+++ b/website.html
@@ -37,9 +37,21 @@
 
     <section id="home">
         <img src="./Professional Head3.jpg" alt="Professional Headshoot">
-        
+        <div class="info-box">
+            <hi><span>Hello, I'm Nkosi</span></hi>
+            <h3><span>Developer</span> Based in CPT</h3>
+            <p>Describe Your Carrer Path</p>
 
 
+        </div>
+
+        <div class="btn-box">
+            <div class="btn">Hire Me</div>
+            <di class="btn">Contact Me</di>
+
+
+
+        </div>
 
     </section>
 
