--- a/website.html
+++ b/website.html
@@ -55,6 +55,51 @@
 
     </section>
 
+    <section id="about">
+        <div class="about-box">
+            <div class="about-info">
+                <h1><span>About Me</span></h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab ex laborum dignissimos, accusantium animi ipsa corrupti aspernatur! Repellendus quia sequi, commodi asperiores quaerat debitis libero officiis sed, quod architecto placeat.</p>
+
+            </div>
+
+            <h2><span>Skills</span></h2>
+            <div class="skills">
+                <ul>
+                    <li>
+                        <span>HTML</span>
+                    </li>
+
+                    <li>
+                        <span>CSS</span>
+                    </li>
+
+                    <li>
+                        <span>JavaScript</span>
+                    </li>
+
+                    <li>
+                        <span>React</span>
+                    </li>
+
+                    <li>
+                        <span>Node</span>
+                    </li>
+
+                    <li>
+                        <span>MySQL</span>
+                    </li>
+                </ul>
+
+
+            </div>
+
+        </div>
+
+
+
+    </section>
+
 
     <script src="script.js"></script>
     
