--- a/website.html
+++ b/website.html
@@ -153,15 +153,45 @@
 
 
             </div>
-            
-            
 
+            <div class="btn">Submit</div>
         </form>
 
 
 
 
     </section>
+
+    <footer>
+
+        <div class="col-left">
+            <div class="col-box">
+                <span></span>
+                <span>4211 Harry Gwala Street, Phillipi 7785</span>
+
+            </div>
+
+            <div class="col-box">
+                <span></span>
+                <span>+27 64 876 8823</span>
+
+            </div>
+
+            <div class="col-box">
+                <span></span>
+                <span>nkosiphendulepakamile@gmail.com</span>
+
+            </div>
+
+        </div>
+
+        <div class="col-right">
+            <span>About My Experience</span>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit minus vero dicta eius hic ipsa reiciendis laboriosam! Excepturi nostrum, tenetur inventore dolorum quo saepe expedita ipsa amet laboriosam, hic necessitatibus!</p>
+        </div>
+
+
+    </footer>
 
 
     <script src="script.js"></script>
