--- a/website.html
+++ b/website.html
@@ -67,27 +67,27 @@
             <div class="skills">
                 <ul>
                     <li>
-                        <span>HTML</span>
+                        <span><i class='bx bx-chevron-right'></i>HTML</span>
                     </li>
 
                     <li>
-                        <span>CSS</span>
+                        <span><i class='bx bx-chevron-right'></i>CSS</span>
                     </li>
 
                     <li>
-                        <span>JavaScript</span>
+                        <span><i class='bx bx-chevron-right'></i>JavaScript</span>
                     </li>
 
                     <li>
-                        <span>React</span>
+                        <span><i class='bx bx-chevron-right'></i>React</span>
                     </li>
 
                     <li>
-                        <span>Node</span>
+                        <span><i class='bx bx-chevron-right'></i>Node</span>
                     </li>
 
                     <li>
-                        <span>MySQL</span>
+                        <span><i class='bx bx-chevron-right'></i>MySQL</span>
                     </li>
                 </ul>
 
@@ -96,6 +96,7 @@
 
         </div>
 
+        <img src="./Professional Head3.jpg" alt="Professional Headshoot">
 
 
     </section>
